src/test/resources/semantic_errors/deep_bad_return.notc
void main() {
    if (true) {
        return;
    } else {
        if (true) {
            return;
        } else {
            if (true) {
                return;
            } else {
                if (true) {
                    return;
                } else {
                    if (true) {
                        return;
                    } else {
                        return "FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF";
                    }
                }
            }
        }
    }
}
